--- a/css/style.css
+++ b/css/style.css
@@ -2453,7 +2453,7 @@ ul {
 
 /* line 7, /Applications/MAMP/htdocs/palash/cl/july 2019/191 Lifeleck Blog/191 Lifeleck Blog html/sass/_banner.scss */
 .banner_post .banner_post_bg_1 {
-  background-image: url("../img/banner_blog/one.jpeg");
+  background-image: url("../img/treTrau/ChiMeo01.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -2461,7 +2461,8 @@ ul {
 
 /* line 10, /Applications/MAMP/htdocs/palash/cl/july 2019/191 Lifeleck Blog/191 Lifeleck Blog html/sass/_banner.scss */
 .banner_post .banner_post_bg_2 {
-  background-image: url("../img/banner_blog/Cuc.jpg");
+  background-image: url("../img/treTrau/QuanhXi.jpg");
+
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -2469,7 +2470,7 @@ ul {
 
 /* line 13, /Applications/MAMP/htdocs/palash/cl/july 2019/191 Lifeleck Blog/191 Lifeleck Blog html/sass/_banner.scss */
 .banner_post .banner_post_bg_3 {
-  background-image: url("../img/banner_blog/two.jpeg");
+  background-image: url("../img/treTrau/xep01.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
